fix: bug fixing for dumping json-LD
